# sampsim

./: .gitignore  LICENSE  README.md  TODO  readme  sampling1.rmd
aux/: Makefile  Results4x50.xlsx  article_final.R  article_final_setup.R  build.sh  default_arc_epi.conf  default_arc_epi_config  default_circle_gps.cfg  default_circle_gps.conf  default_circle_gps_config  default_config  default_enumeration.conf  default_gps_config  default_grid_epi.conf  default_population.conf  default_population_config  default_random.cfg  default_random.conf  default_random_config  default_square_gps.cfg  default_square_gps.conf  default_strip_epi.conf  default_strip_epi_config  experimental.sh  final_cols.R  final_fig_funs.R  final_names.R  final_setup_funs.R  hypercube.sh  hypercube_template.conf  run1and2REV.xlsx
aux/hypercube/: build.sh  hypercube.sh  hypercube_template.conf  parameter_vs_mse.php  summary.sh  true_mean_vs_mse.php
doc/: config.dox.in  doc_mainpage.dox.in  doc_makeall.cmake.in  readme
doc/notes/: circle_gps.rmd  cluster.rmd  disease_status.rmd  epi_test.ods  epi_test.xlsx  pockets.html  pockets.rmd  popdef.html  popdef.rmd  samp1.RData  samp2.RData  sample_eval.html  sample_eval.md  sample_eval.rmd  square_gps.rmd
examples/: baseline_notes.rmd  ex1.html  ex1.rmd  ex2.rmd  ex3.rmd
examples/exdata/: multi2.01.01.json  multi2.01.02.json  multi2.01.03.json  multi2.01.04.json  multi2.01.05.json  multi2.01.06.json  multi2.01.07.json  multi2.01.08.json  multi2.01.09.json  multi2.01.10.json  multi2.02.01.json  multi2.02.02.json  multi2.02.03.json  multi2.02.04.json  multi2.02.05.json  multi2.02.06.json  multi2.02.07.json  multi2.02.08.json  multi2.02.09.json  multi2.02.10.json  multi2.03.01.json  multi2.03.02.json  multi2.03.03.json  multi2.03.04.json  multi2.03.05.json  multi2.03.06.json  multi2.03.07.json  multi2.03.08.json  multi2.03.09.json  multi2.03.10.json  multi2.04.01.json  multi2.04.02.json  multi2.04.03.json  multi2.04.04.json  multi2.04.05.json  multi2.04.06.json  multi2.04.07.json  multi2.04.08.json  multi2.04.09.json  multi2.04.10.json  (+51 more)
examples/multipopulation/: build.sh
examples/multisampling/: animate.sh  build.sh  income.conf  vanilla.conf
examples/multitown/: build.sh  generate_population.sh  histogram.sh  overview.sh  popdens.conf  sample_population.sh  samples.sh  vanilla.conf
examples/testing/: balanced.conf  risk_weighted.conf
examples/visualization/: build.sh  create  income_weighted.conf  pocket_weighted.conf  population_weighted.conf
lib/: CMakeLists.txt
lib/AnyOption/: anyoption.h
lib/UnitTest++/: CMakeLists.txt
lib/anyoption/: anyoption.cpp
lib/jburkardt/: CMakeLists.txt  latin_center.hpp  latin_edge.hpp  latin_random.hpp  readme.txt
lib/local/: CMakeLists.txt  base_object.cxx  base_object.h  building.cxx  building.h  building_catalogue.cxx  building_catalogue.h  building_enumeration.cxx  building_enumeration.h  building_tree.cxx  building_tree.h  coordinate.cxx  coordinate.h  distribution.cxx  distribution.h  enumeration.cxx  enumeration.h  household.cxx  household.h  individual.cxx  individual.h  kd_tree.cxx  kd_tree.h  line.cxx  line.h  model_object.h  options.cxx  options.h  pareto.cxx  pareto.h  population.cxx  population.h  summary.cxx  summary.h  tile.cxx  tile.h  town.cxx  town.h  trend.cxx  trend.h  (+2 more)
lib/local/sample/: CMakeLists.txt  arc_epi.cxx  arc_epi.h  circle_gps.cxx  circle_gps.h  direction_epi.cxx  direction_epi.h  enumeration.cxx  enumeration.h  epi.cxx  epi.h  gps.cxx  gps.h  grid_epi.cxx  grid_epi.h  random.cxx  random.h  sample.cxx  sample.h  sized_sample.cxx  sized_sample.h  square_gps.cxx  square_gps.h  strip_epi.cxx  strip_epi.h
lib/local/sample/testing/: CMakeLists.txt  common.h  test_arc_epi.cxx  test_circle_gps.cxx  test_enumeration.cxx  test_epi.cxx  test_gps.cxx  test_random.cxx  test_sample.cxx  test_sample_arc_epi.cxx  test_sample_circle_gps.cxx  test_sample_enumeration.cxx  test_sample_grid_epi.cxx  test_sample_square_gps.cxx  test_sample_strip_epi.cxx  test_square_gps.cxx  test_strip_epi.cxx  test_vanilla.cxx
lib/local/testing/: CMakeLists.txt  common.h  test_base_object.cxx  test_building.cxx  test_building_catalogue.cxx  test_building_enumeration.cxx  test_building_tree.cxx  test_coordinate.cxx  test_distribution.cxx  test_enumeration.cxx  test_household.cxx  test_individual.cxx  test_kd_tree.cxx  test_model_object.cxx  test_options.cxx  test_pareto.cxx  test_population.cxx  test_tile.cxx  test_town.cxx  test_trend.cxx  test_utilities.cxx
notes/: popdef.rmd
src/: arc_epi.cxx  arc_epi_sample.cxx  arc_epi_sample.h  base_object.h  building.cxx  building.h  circle_gps_sample.cxx  circle_gps_sample.h  common.h  coordinate.cxx  coordinate.h  distribution.cxx  distribution.h  enumeration_sample.cxx  enumeration_sample.h  generate.cxx  gps_sample.cxx  gps_sample.h  grid_epi_sample.cxx  grid_epi_sample.h  household.cxx  household.h  individual.cxx  individual.h  latin_hypercube.cxx  model_object.cxx  options.cxx  options.h  parameter.cxx  parameter.h  population.cxx  population.h  random.cxx  random_sample.cxx  random_sample.h  readme  sample.cxx  sampsim.cxx  simulation.cxx  simulation.h  (+11 more)
src/sample/: arc_epi.cxx  arc_epi.h  epi.cxx  epi.h  random.cxx  random.h  sample.cxx  sample.h  strip_epi.cxx  (+1 more)
testing/: CMakeLists.txt
(+226 files in other folders)
